welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:61: error: '(' expected but identifier found.
for k <- 1 to 3 ) {
    ^PictureMono3:76: error: illegal start of simple expression
}
^PictureMono3:83: error: Unmatched closing brace '}' ignored here
}
^